# sequence-finder

./: .gitignore  Makefile  README.md  blast.py  find_of_overlapping_seq.py  out.txt  prepare.py  primer_3.py  pyproject.toml  replace.py  requirements.txt  setup.cfg  setup.py  splitter.py
src/: __init__.py  blast.py  gui.py  gui_start.py  mapping.py  prepare.py  primer_3.py  run_gui.py  splitter.py
src/download/database_parmentieri/: parmentieri.ndb  parmentieri.nhr  parmentieri.nin  parmentieri.nog  parmentieri.nos  parmentieri.not  parmentieri.nto
src/gui/: __init__.py  blast_panel.py  loading_blast_panel.py  main_panel.py  mapping_panel.py  prepare_panel.py  prepare_window.py  primer_panel.py  splitter_window.py
src/logic/: Blast.py  GenomeDownloader.py  GenomeMapping.py  PrimersMaking.py  Splitter.py  __init__.py
src/utils/: ex.py  test.py
studi_gui/: button.py  gui.py  panel.py  vidjets.py  window.py
studi_gui/download/database_parmentieri/: parmentieri.nhr  parmentieri.nin  parmentieri.nsd  parmentieri.nsi
